updated at: 2020-02-07 19:54, オリジナル3Dモデル「BreadPack」 - まーまれーど・じゃむ - BOOTH

--- a/VRChat/50/1040650.html
+++ b/VRChat/50/1040650.html
@@ -271,13 +271,8 @@
                             ・Readme.txt ・利用規約.txt(必ずお読みください)
                             ・Dataフォルダ(Texture、OBJファイル) ■利用規約について
                             ・再配布不可 ・商用利用不可（例外あり） ・エロ、グロに該当する表現への利用
-                            ・モデル改造可(再配布、商用は不可) 詳細は以下のリンクよりご確認ください。
-                            http://jaaaaam.com/2018/10/08/breadpack/
+                            ・モデル改造可(再配布、商用は不可) 詳細は下記よりご確認ください。
                             利用規約についての内容は予告なく変更する場合があります。
-                            -------------------------------------
-                            《連絡先/Contact》 【Twitter】
-                            https://twitter.com/_jam_cg 【Web】
-                            http://jaaaaam.com/
                           </p>
                         </div>
                       </section>
@@ -309,6 +304,17 @@
                               <div class=
                               "search-guide-tablet-label-inner">
                                 VRChat
+                              </div>
+                            </div></a><a class=
+                            "search-guide-tablet" data-tracking=
+                            "click" data-product-list=
+                            "from market_show via tag_list to search_index"
+                            href=
+                            "https://booth.pm/ja/search/3D%E7%94%A8%E3%82%AA%E3%83%96%E3%82%B8%E3%82%A7%E3%82%AF%E3%83%88">
+                            <div class="search-guide-tablet-label">
+                              <div class=
+                              "search-guide-tablet-label-inner">
+                                3D用オブジェクト
                               </div>
                             </div></a>
                           </div>
