updated at: 2020-02-08 02:04, オリジナル3Dモデル　「GOU NoSleeve Ver.」 - aburage factory - BOOTH

--- a/VRChat/47/1262147.html
+++ b/VRChat/47/1262147.html
@@ -6,7 +6,7 @@
       オリジナル3Dモデル　「GOU NoSleeve Ver.」 - aburage factory - BOOTH
     </title>
     <meta name="description" content=
-    "-----更新履歴----- 2020年2月6日 法線修正、ボーン修正、モーフ名称の整理、胸のサイズ調整をシェイプキーに変更 2019年3月6日　Ver1.0 2019年6月18日　ローポリモデルデータ追加 VRC向け　オリジナル3Dモデル　GOU 袖なし版 -----本モデル「GOU」について----- アンドロイドの女性ボディ「GOU」です 指、手首が球体関節のようになっておりますので 苦手な方はご注意ください。 VRCでの利用を想定して作成した3Dモデルになります 胸のサイズ別に2種類のデータを同梱しています。 詳しくは画像を参照してください">
+    "-----更新履歴----- 2020年2月8日 パーカーの裾のウェイト再変更 今まで通り脚と一緒に動くように戻しました 20200206のファイルは脚が貫通します 2020年2月6日 法線修正、ボーン修正、モーフ名称の整理、胸のサイズ調整をシェイプキーに変更 2019年3月6日　Ver1.0 2019年6月18日　ローポリモデルデータ追加 VRC向け　オリジナル3Dモデル　GOU 袖なし版 -----本モデル「GOU」について----- アンドロイドの女性ボディ「GOU」です 指、手首が球体関節のようになっておりますので 苦手な方はご注意ください。">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1262147">
@@ -15,14 +15,14 @@
     <meta name="twitter:title" content=
     "オリジナル3Dモデル　「GOU NoSleeve Ver.」 - aburage factory - BOOTH">
     <meta name="twitter:description" content=
-    "-----更新履歴----- 2020年2月6日 法線修正、ボーン修正、モーフ名称の整理、胸のサイズ調整をシェイプキーに変更 2019年3月6日　Ver1.0 2019年6月18日　ローポリモデルデータ追加 VRC向け　オリジナル3Dモデル　GOU 袖なし版 -----本モデル「GOU」について----- アンドロイドの女性ボディ「GOU」です 指、手首が球体関節のようになっておりますので 苦手な方はご注意ください。 VRCでの利用を想定して作成した3Dモデルになります 胸のサイズ別に2種類のデータを同梱しています。 詳しくは画像を参照してください">
+    "-----更新履歴----- 2020年2月8日 パーカーの裾のウェイト再変更 今まで通り脚と一緒に動くように戻しました 20200206のファイルは脚が貫通します 2020年2月6日 法線修正、ボーン修正、モーフ名称の整理、胸のサイズ調整をシェイプキーに変更 2019年3月6日　Ver1.0 2019年6月18日　ローポリモデルデータ追加 VRC向け　オリジナル3Dモデル　GOU 袖なし版 -----本モデル「GOU」について----- アンドロイドの女性ボディ「GOU」です 指、手首が球体関節のようになっておりますので 苦手な方はご注意ください。">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/024e48e3-cbe8-4f5b-9672-5ebba214c0dc/i/1262147/ca118823-a867-45f2-a672-85580aa51f08_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
     "オリジナル3Dモデル　「GOU NoSleeve Ver.」 - aburage factory - BOOTH">
     <meta property="og:description" content=
-    "-----更新履歴----- 2020年2月6日 法線修正、ボーン修正、モーフ名称の整理、胸のサイズ調整をシェイプキーに変更 2019年3月6日　Ver1.0 2019年6月18日　ローポリモデルデータ追加 VRC向け　オリジナル3Dモデル　GOU 袖なし版 -----本モデル「GOU」について----- アンドロイドの女性ボディ「GOU」です 指、手首が球体関節のようになっておりますので 苦手な方はご注意ください。 VRCでの利用を想定して作成した3Dモデルになります 胸のサイズ別に2種類のデータを同梱しています。 詳しくは画像を参照してください">
+    "-----更新履歴----- 2020年2月8日 パーカーの裾のウェイト再変更 今まで通り脚と一緒に動くように戻しました 20200206のファイルは脚が貫通します 2020年2月6日 法線修正、ボーン修正、モーフ名称の整理、胸のサイズ調整をシェイプキーに変更 2019年3月6日　Ver1.0 2019年6月18日　ローポリモデルデータ追加 VRC向け　オリジナル3Dモデル　GOU 袖なし版 -----本モデル「GOU」について----- アンドロイドの女性ボディ「GOU」です 指、手首が球体関節のようになっておりますので 苦手な方はご注意ください。">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/024e48e3-cbe8-4f5b-9672-5ebba214c0dc/i/1262147/ca118823-a867-45f2-a672-85580aa51f08_base_resized.jpg">
     <meta property="og:url" content=
@@ -329,7 +329,9 @@
                         <div class=
                         "js-market-item-detail-description">
                           <p class="autolink u-text-wrap">
-                            -----更新履歴----- 2020年2月6日
+                            -----更新履歴----- 2020年2月8日 パーカーの裾のウェイト再変更
+                            今まで通り脚と一緒に動くように戻しました
+                            20200206のファイルは脚が貫通します 2020年2月6日
                             法線修正、ボーン修正、モーフ名称の整理、胸のサイズ調整をシェイプキーに変更
                             2019年3月6日　Ver1.0
                             2019年6月18日　ローポリモデルデータ追加
