updated at: 2020-02-08 03:12, バーチャル手作りチョコレート 1.1 - 仮想VoidCat - BOOTH

--- a/VRChat/07/1226907.html
+++ b/VRChat/07/1226907.html
@@ -3,28 +3,28 @@
   <head>
     <meta charset="utf-8">
     <title>
-      手作りチョコレート - 仮想VoidCat - BOOTH
+      バーチャル手作りチョコレート 1.1 - 仮想VoidCat - BOOTH
     </title>
     <meta name="description" content=
-    "みんなへのバレンタインプレゼントですよ！ 9つ種類のチョコレートが含めっています！ ・3Dデータ形式：FBX ・テクスチャー形式：PNG ・メッシュ数：11 ・ポリゴン数：3738">
+    "みんなへのバレンタインプレゼントですよ！ 9つ種類のチョコレートが含めっています！ ・3Dデータ形式：FBX ・テクスチャー形式：PNG ・メッシュ数：11 ・ポリゴン数：3738 2020/02/07 v1.1アップデートしました！">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1226907">
     <meta name="twitter:site" content="booth_pm">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content=
-    "手作りチョコレート - 仮想VoidCat - BOOTH">
+    "バーチャル手作りチョコレート 1.1 - 仮想VoidCat - BOOTH">
     <meta name="twitter:description" content=
-    "みんなへのバレンタインプレゼントですよ！ 9つ種類のチョコレートが含めっています！ ・3Dデータ形式：FBX ・テクスチャー形式：PNG ・メッシュ数：11 ・ポリゴン数：3738">
+    "みんなへのバレンタインプレゼントですよ！ 9つ種類のチョコレートが含めっています！ ・3Dデータ形式：FBX ・テクスチャー形式：PNG ・メッシュ数：11 ・ポリゴン数：3738 2020/02/07 v1.1アップデートしました！">
     <meta name="twitter:image" content=
-    "https://booth.pximg.net/c/620x620/8e4c6e25-746f-4ea7-b9a8-51d10ed80b3b/i/1226907/7851e48b-5ec3-4e80-b4de-4707766cc535_base_resized.jpg">
+    "https://booth.pximg.net/c/620x620/8e4c6e25-746f-4ea7-b9a8-51d10ed80b3b/i/1226907/c3cc9c85-49fb-4e68-a1ae-75b5f9bc5ce9_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content=
-    "手作りチョコレート - 仮想VoidCat - BOOTH">
+    "バーチャル手作りチョコレート 1.1 - 仮想VoidCat - BOOTH">
     <meta property="og:description" content=
-    "みんなへのバレンタインプレゼントですよ！ 9つ種類のチョコレートが含めっています！ ・3Dデータ形式：FBX ・テクスチャー形式：PNG ・メッシュ数：11 ・ポリゴン数：3738">
+    "みんなへのバレンタインプレゼントですよ！ 9つ種類のチョコレートが含めっています！ ・3Dデータ形式：FBX ・テクスチャー形式：PNG ・メッシュ数：11 ・ポリゴン数：3738 2020/02/07 v1.1アップデートしました！">
     <meta property="og:image" content=
-    "https://booth.pximg.net/c/620x620/8e4c6e25-746f-4ea7-b9a8-51d10ed80b3b/i/1226907/7851e48b-5ec3-4e80-b4de-4707766cc535_base_resized.jpg">
+    "https://booth.pximg.net/c/620x620/8e4c6e25-746f-4ea7-b9a8-51d10ed80b3b/i/1226907/c3cc9c85-49fb-4e68-a1ae-75b5f9bc5ce9_base_resized.jpg">
     <meta property="og:url" content=
     "https://booth.pm/ja/items/1226907">
     <meta name="ga:shop" content="UA-131333751-1">
@@ -132,7 +132,7 @@
                         </div>
                         <h2 class=
                         "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
-                          手作りチョコレート
+                          バーチャル手作りチョコレート 1.1
                         </h2>
                         <div class="item-summary__caption"></div>
                       </header>
@@ -177,9 +177,9 @@
                                     <a class=
                                     "btn add-cart full-length"
                                     title=
-                                    "ValentineChocolate_1.01.zip"
+                                    "ValentineChocolate_1.1.zip"
                                     href=
-                                    "https://booth.pm/downloadables/502353">
+                                    "https://booth.pm/downloadables/893956">
                                     <div class="u-d-block">
                                       <span class=
                                       "cmd-label">無料ダウンロード</span>
@@ -188,13 +188,13 @@
                                     "u-d-flex u-flex-wrap u-justify-content-center u-tpg-caption1 u-fw-normal">
                                       <div class=
                                       "u-text-ellipsis u-max-w-50">
-                                        ValentineChocolate_1.01
+                                        ValentineChocolate_1.1
                                       </div>
                                       <div>
                                         .zip
                                       </div>
                                       <div>
-                                        &nbsp;(1.1 MB)
+                                        &nbsp;(17.1 MB)
                                       </div>
                                     </div></a>
                                   </div>
@@ -210,7 +210,8 @@
                           <a data-url=
                           "https://booth.pm/ja/items/1226907"
                           data-lang="ja" data-hashtags="booth_pm"
-                          data-text="手作りチョコレート | 仮想VoidCat"
+                          data-text=
+                          "バーチャル手作りチョコレート 1.1 | 仮想VoidCat"
                           data-count="none" class=
                           "twitter-share-button" href=
                           "https://twitter.com/share">ツイート</a>
@@ -229,27 +230,27 @@
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="手作りチョコレート" class=
+                            <img alt="バーチャル手作りチョコレート 1.1" class=
                             "market-item-detail-item-image" src=
-                            "https://booth.pximg.net/8e4c6e25-746f-4ea7-b9a8-51d10ed80b3b/i/1226907/7851e48b-5ec3-4e80-b4de-4707766cc535_base_resized.jpg">
+                            "https://booth.pximg.net/8e4c6e25-746f-4ea7-b9a8-51d10ed80b3b/i/1226907/c3cc9c85-49fb-4e68-a1ae-75b5f9bc5ce9_base_resized.jpg">
                           </div>
                         </div>
                         <div>
                           <div class=
                           "market-item-detail-item-image-wrapper">
-                            <img alt="手作りチョコレート" class=
-                            "market-item-detail-item-image"
-                            data-lazy=
-                            "https://booth.pximg.net/8e4c6e25-746f-4ea7-b9a8-51d10ed80b3b/i/1226907/c51932d6-88b1-4a30-8f25-d4f5414d1860_base_resized.jpg">
-                          </div>
-                        </div>
-                        <div>
-                          <div class=
-                          "market-item-detail-item-image-wrapper">
-                            <img alt="手作りチョコレート" class=
+                            <img alt="バーチャル手作りチョコレート 1.1" class=
                             "market-item-detail-item-image"
                             data-lazy=
                             "https://booth.pximg.net/8e4c6e25-746f-4ea7-b9a8-51d10ed80b3b/i/1226907/b48ce50f-7976-48ac-bb90-88734608aec3_base_resized.jpg">
+                          </div>
+                        </div>
+                        <div>
+                          <div class=
+                          "market-item-detail-item-image-wrapper">
+                            <img alt="バーチャル手作りチョコレート 1.1" class=
+                            "market-item-detail-item-image"
+                            data-lazy=
+                            "https://booth.pximg.net/8e4c6e25-746f-4ea7-b9a8-51d10ed80b3b/i/1226907/9012d37f-9e4b-4064-bb2a-78a7adeb8ce3_base_resized.jpg">
                           </div>
                         </div>
                       </div>
@@ -257,15 +258,15 @@
                         <a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/8e4c6e25-746f-4ea7-b9a8-51d10ed80b3b/i/1226907/7851e48b-5ec3-4e80-b4de-4707766cc535_base_resized.jpg">
-                        </div></a><a class="pointer">
-                        <div class="slick-thumbnail-border">
-                          <img src=
-                          "https://booth.pximg.net/c/72x72_a2_g5/8e4c6e25-746f-4ea7-b9a8-51d10ed80b3b/i/1226907/c51932d6-88b1-4a30-8f25-d4f5414d1860_base_resized.jpg">
+                          "https://booth.pximg.net/c/72x72_a2_g5/8e4c6e25-746f-4ea7-b9a8-51d10ed80b3b/i/1226907/c3cc9c85-49fb-4e68-a1ae-75b5f9bc5ce9_base_resized.jpg">
                         </div></a><a class="pointer">
                         <div class="slick-thumbnail-border">
                           <img src=
                           "https://booth.pximg.net/c/72x72_a2_g5/8e4c6e25-746f-4ea7-b9a8-51d10ed80b3b/i/1226907/b48ce50f-7976-48ac-bb90-88734608aec3_base_resized.jpg">
+                        </div></a><a class="pointer">
+                        <div class="slick-thumbnail-border">
+                          <img src=
+                          "https://booth.pximg.net/c/72x72_a2_g5/8e4c6e25-746f-4ea7-b9a8-51d10ed80b3b/i/1226907/9012d37f-9e4b-4064-bb2a-78a7adeb8ce3_base_resized.jpg">
                         </div></a>
                       </div>
                       <section>
@@ -275,6 +276,7 @@
                             みんなへのバレンタインプレゼントですよ！
                             9つ種類のチョコレートが含めっています！ ・3Dデータ形式：FBX
                             ・テクスチャー形式：PNG ・メッシュ数：11 ・ポリゴン数：3738
+                            2020/02/07 v1.1アップデートしました！
                           </p>
                         </div>
                       </section>
