updated at: 2020-02-08 16:48, あっと式オリジナル３Dアバター『量産型仮面天使アンジェ』 - あっとまーく人形館 - BOOTH

--- a/VRChat/45/1177645.html
+++ b/VRChat/45/1177645.html
@@ -298,14 +298,17 @@
                             　・利用規約に違反しない範囲での改変可
                             ---------------------------
                             ↓以下は利用規約です。大事だからダウンロードの前に読んでね。 [日本語]
-                            利用規約　2019/01/14より適用
-                            オリジナル3Dモデル『量産型仮面天使アンジェ』ver.1.00
+                            利用規約　2019/01/14より適用（※１　2020/02/09
+                            第一回改訂） オリジナル3Dモデル『量産型仮面天使アンジェ』ver.1.00
                             製作者：あっと　（twitterID:@aaattttttooo）
                             あっと式オリジナル3Dモデル『量産型仮面天使アンジェ』をDLいただき誠にありがとうございます。
                             本モデルを購入もしくはダウンロードした時点で本利用規約に同意したものとします。
                             本規約は変更することがあり、最新のものを適用するものとします。
-                            本規約に記載のない事項に関しては原則禁止事項にあたるものとします。 〇禁止事項
-                            本ファイルの内容物の全てまたは一部を含んだものを
+                            本規約に記載のない事項に関しては原則禁止事項にあたるものとします。 （※１）
+                            なお、本モデルが製作者であるあっと（twitterID:@aaattttttooo）以外の名のもとに有料もしくは無料で販売されていた場合、
+                            その販売者は本モデルの製作者であるあっと（twitterID:@aaattttttooo）の著作権を侵害しています。
+                            貴方の大事なお金が違法行為の犠牲にならないようにご注意ください。））
+                            〇禁止事項 本ファイルの内容物の全てまたは一部を含んだものを
                             ・複製して第三者への販売・譲渡・貸与・配布等を行うこと
                             ・流用(コピー等)して類似の製品や出版物を製造、販売すること
                             ・二次配布や第三者が利用できる状態にする行為
@@ -319,8 +322,10 @@
                             ・製作者を偽る行為 ・製作者名乗る行為 ・製作者を書き換える行為
                             ・特定個人・団体・宗教・政治・組織への誹謗中傷のための利用 を禁止します。
                             ※守っていただけると私が笑顔になります。守っていただけないと私がひどく悲しみます。
-                            〇認可事項 本ファイルの内容物の全てまたは一部を含んだものを用いて
-                            ・アバターとしての使用が可能なサービスへ利用すること （例：VRChat）
+                            〇認可事項（※１）
+                            禁止事項に当たらない範囲において、本ファイルの内容物の全てまたは一部を含んだものを用いて
+                            ・SocialVRにおいて、自分だけが使えるアバターとして使用すること
+                            ・SocialVRにおいて、ワールドをつくるアセットとして利用すること
                             ・動画配信を行うこと ・VirtualYoutuberとして活動すること
                             以上を認めます。
                             また、禁止事項に違反しない範囲において、本ファイル内の3Dモデルの改変を認めます。
@@ -334,109 +339,6 @@
                             ・利用者やその他の第三者に発生した機会逸失、業務の中断その他いかなる損害(間接損害や逸失利益を含む)に対して、制作者が係る損害の可能性を事前に通知されていた場合であっても、制作者は一切の責任を負いません。
                             ・本ファイルの内容物とこれを利用した改変データの著作権は大元の製作者である　あっと（twitterID:@aaattttttooo）　が有するものとします。
                             ・本規約内の日本語版と英語版で意味の齟齬がある場合、日本語版の規約内容を適用します。
-                            ※本ファイルの解凍用パスワードは「kinokonokaminohikariare」です。
-                            [English] Terms of service. Applied
-                            from 14/01/2019 Original 3D model
-                            "量産型仮面天使アンジェ" ver.1.00 Producer: あっと
-                            (twitterID: @ aaattttttooo) Thank you
-                            very much for downloading the original
-                            3D model "量産型仮面天使アンジェ". You agree to
-                            these Terms of Use at the time you
-                            purchase or download this model. These
-                            Terms may be subject to change and the
-                            latest ones shall be applied. Regarding
-                            matters not stated in this contract, in
-                            principle, it is a prohibited matter. ○
-                            Prohibited matter For those containing
-                            all or part of the contents of this
-                            file, · Act of conducting sales,
-                            transfer, loan, distribution, etc. to a
-                            third party by d uplicating this
-                            content. · Act by diverting (copying,
-                            etc.) all or a part of the material of
-                            this content to manufacture and selling
-                            similar products and publications. ·
-                            Other secondary distribution and acts
-                            to make it available to third parties
-                            (Example: Distribution of avatar to
-                            third party using pedestal in VRChat) ·
-                            Registration acts such as trademark
-                            registration, design registration, etc.
-                            usin g this content. · Various
-                            contracting work using this content. ·
-                            Commercial usage acts on download
-                            content products. · Act of
-                            manufacturing and selling mass-produced
-                            products. · Sexual expression contrary
-                            to public order and morals, use for
-                            violence expression We will prohibit
-                            the above. Also, by using the contents
-                            including all or part of the contents
-                            of this file, · Acts where producers
-                            suffer disadvantage · Acts that
-                            significantly negatively affect the
-                            distribution and sale of this file ·
-                            Acts that misrepresent himself as the
-                            creator of this work · Acts that you
-                            claim to be the creator of this work ·
-                            Act of rewriting the creator of the
-                            work · Use for slander injuries to
-                            specific individuals, organizations,
-                            religions, politics and organizations
-                            We will prohibit the above. * When you
-                            observe the rules, I will smile. I will
-                            be very sad if you do not keep the
-                            rules. ○ Authorization Using contents
-                            including all or part of contents of
-                            this file · Use it for services that
-                            can be used as avatars (Example:
-                            VRChat) · To distribute video · Act as
-                            VirtualYoutuber I acknowledge the
-                            above. In addition, we will allow
-                            modification of the 3D model in this
-                            file to the extent that it does not
-                            violate the prohibited matter.（※１） 〇
-                            Other · Producers are not responsible
-                            for any inconvenience, disadvantage,
-                            loss or trouble caused by using the
-                            contents of this file containing all or
-                            part of the contents. · The content
-                            creator does not concern at all with
-                            regard to the user's PC usage
-                            environment and assumes absolutely no
-                            responsibility. · The content creator
-                            assumes no responsibility for any
-                            damage caused by the contents change of
-                            this material or termination of sales.
-                            · The content creator assumes no
-                            responsibility in the event of a
-                            disorder concerning the use / browsing
-                            of this content due to unexpected
-                            factors. · The content creator shall
-                            not be liable for any damages directly
-                            or indirectlycaused to the user due to
-                            the use of this material. · Content
-                            creator shall not be liable for any
-                            damages caused by the use of this
-                            content. · In the event that the
-                            producer has been notified in advance
-                            of the possibility of such damage to
-                            the user or other third party against
-                            any loss of opportunity, interruption
-                            of business or any damage (including
-                            indirect damage or lost profit) Even
-                            the creator does not take any
-                            responsibility. · The copyright of the
-                            content of this file and the modified
-                            data using it shall be owned by the
-                            original producer (twitterID: @
-                            aaattttttooo). · If there is a
-                            discrepancy in meaning between the
-                            Japanese version and the English
-                            version within this policy, the content
-                            of the Japanese version is applied. ※
-                            The decompressing password of this file
-                            is "kinokonokaminohikariare".
                           </p>
                         </div>
                       </section>
